--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ a, a:hover {
     color: blueviolet;
     text-decoration: none;
 }
-#timer {
+#time {
     margin: 5px;
 }
 .content {
@@ -29,13 +29,7 @@ a, a:hover {
 #answerDiv {
     margin-top: 20px;
 }
-#quiz {
-    display: none;
-}
-#endgame {
-    display: none;
-}
-#high-scores {
+#quiz, #endgame, #high-scores {
     display: none;
 }
 ol {
